--- a/api/locales/gr/translation.json
+++ b/api/locales/gr/translation.json
@@ -8,5 +8,6 @@
     "password_size":  "Απαιτούνται τουλάχιστον 6 χαρακτήρες",
     "password_pattern":  "Απαιτείται τουλάχιστον 1 κεφαλαίο, 1 μικρό γραμμα και 1 χαρακτήρας",
     "email_inuse":  "Το email χρησιμοποιείται ήδη",
-    "user_create_success": "Ο χρήστης δημιουργήθηκε επιτυχώς"
+    "user_create_success": "Ο χρήστης δημιουργήθηκε επιτυχώς",
+    "email_failure": "Η αποστολή του email απέτυχε"
 }
