--- a/api/locales/en/translation.json
+++ b/api/locales/en/translation.json
@@ -7,5 +7,6 @@
     "password_size":  "Password can be at least 6 characters",
     "password_pattern":  "Password can have at least 1 uppercase, 1 lowercase and 1 number",
     "email_inuse":  "Email in use",
-    "user_create_success": "User Created"
+    "user_create_success": "User Created",
+    "email_failure": "Email failure"
 }
