--- a/api/locales/en/translation.json
+++ b/api/locales/en/translation.json
@@ -8,5 +8,7 @@
     "password_pattern":  "Password can have at least 1 uppercase, 1 lowercase and 1 number",
     "email_inuse":  "Email in use",
     "user_create_success": "User Created",
-    "email_failure": "Email failure"
+    "email_failure": "Email failure",
+    "account_activation_failure": "This account is either active or the token is invalid",
+    "account_activation_success": "Account is activated"
 }
