--- a/api/locales/gr/translation.json
+++ b/api/locales/gr/translation.json
@@ -11,5 +11,6 @@
     "user_create_success": "Ο χρήστης δημιουργήθηκε επιτυχώς",
     "email_failure": "Η αποστολή του email απέτυχε",
     "account_activation_failure": "Ο λογαριασμός είναι ενεργός ή το token είναι λαθός",
-    "account_activation_success": "Ο λογαριασμός ενεργοποιήθηκε"
+    "account_activation_success": "Ο λογαριασμός ενεργοποιήθηκε",
+    "validation_failure":"Λάθος στοιχεία"
 }
