--- a/api/locales/en/translation.json
+++ b/api/locales/en/translation.json
@@ -14,6 +14,7 @@
     "validation_failure":"Validation Failure",
     "user_not_found":"User not found",
     "authentication_failure":"Incorrect credentials",
-    "inactive_authentication_failure":"Account is inactive"
+    "inactive_authentication_failure":"Account is inactive",
+    "unauthorised_user_update":"Unauthorised user"
     
 }
