password reset request

--- a/api/locales/en/translation.json
+++ b/api/locales/en/translation.json
@@ -16,6 +16,7 @@
     "authentication_failure":"Incorrect credentials",
     "inactive_authentication_failure":"Account is inactive",
     "unauthorised_user_update":"Unauthorised user",
-    "unauthorised_user_delete":"You are unauthorized to delete user"
+    "unauthorised_user_delete":"You are unauthorized to delete user",
+    "email_not_inuse":"Email not found"
     
 }
