--- a/api/locales/gr/translation.json
+++ b/api/locales/gr/translation.json
@@ -17,5 +17,6 @@
     "authentication_failure":"Λανθασμένα στοιχεία σύνδεσης",
     "inactive_authentication_failure":"Ο λογαριασμός είναι ανενεργός",
     "unauthorised_user_update":"Ο χρήστης δεν έχει δικαιωδοσία",
-    "unauthorised_user_delete":"Ο χρήστης δεν έχει δικαιωδοσία να διαγράψει τον χρήστη"
+    "unauthorised_user_delete":"Ο χρήστης δεν έχει δικαιωδοσία να διαγράψει τον χρήστη",
+    "email_not_inuse":"Δεν βρέθηκε το email"
 }
