--- a/api/locales/gr/translation.json
+++ b/api/locales/gr/translation.json
@@ -19,5 +19,6 @@
     "unauthorised_user_update":"Ο χρήστης δεν έχει δικαιωδοσία",
     "unauthorised_user_delete":"Ο χρήστης δεν έχει δικαιωδοσία να διαγράψει τον χρήστη",
     "email_not_inuse":"Δεν βρέθηκε το email",
-    "password_reset_request_success": "Ελέξτε το email σας"
+    "password_reset_request_success": "Ελέξτε το email σας",
+    "unauthorized_password_reset": "Δεν έχετε δικαιωδοσία να αλλάξετε password"
 }
