--- a/api/locales/en/translation.json
+++ b/api/locales/en/translation.json
@@ -19,6 +19,7 @@
     "unauthorised_user_delete":"You are unauthorized to delete user",
     "email_not_inuse":"Email not found",
     "password_reset_request_success": "Check your email for reseting the password",
-    "unauthorized_password_reset": "You are not authorized to update your password"
+    "unauthorized_password_reset": "You are not authorized to update your password",
+    "profile_image_size" : "Your profile image cannot be bigger than 2 MB"
     
 }
