--- a/api/locales/gr/translation.json
+++ b/api/locales/gr/translation.json
@@ -20,5 +20,6 @@
     "unauthorised_user_delete":"Ο χρήστης δεν έχει δικαιωδοσία να διαγράψει τον χρήστη",
     "email_not_inuse":"Δεν βρέθηκε το email",
     "password_reset_request_success": "Ελέξτε το email σας",
-    "unauthorized_password_reset": "Δεν έχετε δικαιωδοσία να αλλάξετε password"
+    "unauthorized_password_reset": "Δεν έχετε δικαιωδοσία να αλλάξετε password",
+    "profile_image_size" : "Η φωτογραφία προφίλ δεν μπορεί να είναι μεγαλυτερή των 2 ΜΒ"
 }
