--- a/api/locales/gr/translation.json
+++ b/api/locales/gr/translation.json
@@ -21,5 +21,6 @@
     "email_not_inuse":"Δεν βρέθηκε το email",
     "password_reset_request_success": "Ελέξτε το email σας",
     "unauthorized_password_reset": "Δεν έχετε δικαιωδοσία να αλλάξετε password",
-    "profile_image_size" : "Η φωτογραφία προφίλ δεν μπορεί να είναι μεγαλυτερή των 2 ΜΒ"
+    "profile_image_size" : "Η φωτογραφία προφίλ δεν μπορεί να είναι μεγαλυτερή των 2 ΜΒ",
+    "unsupported_image_file" :"Μόνο JPEG και PNG  υποστηρίζονται"
 }
