--- a/api/locales/gr/translation.json
+++ b/api/locales/gr/translation.json
@@ -23,5 +23,6 @@
     "unauthorized_password_reset": "Δεν έχετε δικαιωδοσία να αλλάξετε password",
     "profile_image_size" : "Η φωτογραφία προφίλ δεν μπορεί να είναι μεγαλυτερή των 2 ΜΒ",
     "unsupported_image_file" :"Μόνο JPEG και PNG  υποστηρίζονται",
-    "unauthorized_hoax_submit" : "Δεν έχετε δικαιωδοσία να αναρτήσετε hoax"
+    "unauthorized_hoax_submit" : "Δεν έχετε δικαιωδοσία να αναρτήσετε hoax",
+    "hoax_submit_success" : "Το Hoax αποθηκεύτηκε"
 }
