File Size Limit

--- a/api/locales/gr/translation.json
+++ b/api/locales/gr/translation.json
@@ -25,5 +25,6 @@
     "unsupported_image_file" :"Μόνο JPEG και PNG  υποστηρίζονται",
     "unauthorized_hoax_submit" : "Δεν έχετε δικαιωδοσία να αναρτήσετε hoax",
     "hoax_submit_success" : "Το Hoax αποθηκεύτηκε",
-    "hoax_content_size": "Το Hoax πρέπει να είναι τουλάχιστον 10 και το πολύ 5000 χαρακτήρες"
+    "hoax_content_size": "Το Hoax πρέπει να είναι τουλάχιστον 10 και το πολύ 5000 χαρακτήρες",
+    "attachment_size_limit":"Το συννημένο δεν μπορεί να είναι μεγαλυτέρο των 5MB"
 }
